# concc

./: README.md
.github/workflows/: ci.yml
docker/: .dockerignore  .gitignore  Dockerfile  Dockerfile.icecc-daemon  Dockerfile.icecc-scheduler  Dockerfile.sftp  Dockerfile.tools  Makefile  build-sshfs.sh  setup.sh
docker/sshfs/: cache2.c  cache2.h  cache2.patch
docker/tools/: Cargo.toml
docker/tools/concc-scriptify/: Cargo.toml
docker/tools/concc-scriptify/src/: main.rs
docker/tools/concc-worker-pool/: Cargo.toml
docker/tools/concc-worker-pool/src/: main.rs
docker/tools/src/: concc-scriptify.rs
examples/: README.md  common.makefile
examples/chromium/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  build.sh  buildenv.sh  docker-compose.yml  netfs.cache.yml  netfs.override.yml  workspacefs.override.yaml
examples/chromium/scripts/: exec-local  run-locally  setup-client
examples/gcc/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  build.sh  buildenv.sh  docker-compose.yml
examples/gcc/scripts/: exec-local  run-locally
examples/rust/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  build.sh  docker-compose.yml  workspacefs.override.yaml
examples/rust/scripts/: exec-local  setup-client  setup-worker
scripts/: concc-wrapper  metrics-html.py  metrics-json.py  rtt-delay.sh  run-worker.sh  scriptify.py  setup.sh  strace-gcc.sh  strace-html.py  strace-jobtree.py  strace-json.py  worker-pool
