[package]
name = "concc-tools"
version = "0.1.0"
authors = ["Contributors of concc"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.44"
fs2 = "0.4.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
shell-words = "1.0.0"
structopt = "0.3.23"

[profile.release]
lto = true

[[bin]]
name = "concc-worker-pool"
path = "src/concc-worker-pool.rs"

[[bin]]
name = "concc-scriptify"
path = "src/concc-scriptify.rs"
