[package]
name = "concc-worker-pool"
version = "0.1.0"
authors = ["Contributors of concc-build"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.44"
fs2 = "0.4.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
structopt = "0.3.23"
